editing profile refactoring